--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -69,14 +69,14 @@
             to close their eyes and open their minds to experience it as the blind would.”
           </p>
           <p>They wanted you to test your senses – taste, smell and what you think you know about wine, in support of
-            the blind. Their theory is that by removing you one sense, sight, which is your most active sense, you might
+            the blind. Their theory is that by removing one of your senses, sight, which is your most active sense, you might
             just experience the world in a different way. This is a unique concept in partnership with Kaleidoscope, KWV
             and Bravo Design.
           </p>
           <p>All funds generated through this project will be channelled towards the care and support of visually and
-            additionally impaired adults cared for by Innovation for the Blind. In 2018 alone 2250 bottles was sold and the
+            additionally impaired adults cared for by Innovation for the Blind. In 2018 alone 2250 bottles were sold and the
             funds donated.
-            <p>The label is a beautiful black with gold embossed words and filigree. The result is eye catching and bold
+            <p>The label is a beautiful black design with gold embossed words and filigree. The result is eye catching, bold,
               and looks good on display.
             </p> <img src="img/BlindTasting2018.jpg" alt="Blind Tasting Red Blend 2018" width="240" height="379">
           </p>
